--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.3.7",
     "@types/mime": "3",
+    "@types/passport-jwt": "^4.0.1",
+    "bcrypt": "^5.1.1",
     "mongoose": "^8.2.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
