--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.3.7",
+    "@nestjs/swagger": "^7.3.1",
     "@types/mime": "3",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "mongoose": "^8.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
